# moling-user-service

./: .gitignore  Dockerfile  README.md  env  env.example  pyproject.toml  test_import.py  test_simple.py
alembic/: env.py
alembic/versions/: b5655f13e8dc_initial_migration_for_postgresql.py
app/: logger.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  jwt_keys.py  language.py  oauth.py  permissions.py  roles.py  tenant.py  users.py
app/config/: settings.py
app/constants/: common.py
app/infrastructure/redis/: factory.py
app/models/: __init__.py  permission.py  role.py  tenant.py  user.py
app/schemes/: auth.py  common.py  language.py  permission.py  role.py  tenant.py  user.py
app/services/auth_mgmt/: auth_service.py  jwt_service.py  oauth_service.py  password_service.py  verify_code_service.py
app/services/common/: email_service.py  file_service.py  i18n_service.py  sms_service.py
app/services/permission_mgmt/: permission_service.py  role_service.py
app/services/user_mgmt/: tenant_service.py  user_service.py
app/utils/: common.py
