[tool.poetry]
name = "moling-user-service"
version = "0.1.0"
description = "用户管理服务系统"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# =============================================================================
# 服务框架
# =============================================================================
fastapi = "0.116.1"
uvicorn = "0.35.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
python-multipart = "0.0.20"
httpx = "0.28.1"
requests = "2.31.0"
anyio = "4.10.0"
starlette = "0.47.3"
typing_extensions = "4.15.0"
annotated-types = "0.7.0"
pydantic_core = "2.33.2"
typing-inspection = "0.4.1"
python-dotenv = "1.1.1"
python-json-logger = "2.0.7"
colorama = "0.4.6"

# =============================================================================
# 基础设施
# =============================================================================
# 数据库
sqlalchemy = "2.0.43"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
pymysql = "1.1.0"
aiomysql = "0.2.0"
asyncpg = "0.30.0"
aiosqlite = ">=0.20.0,<0.22.0"

# 文件存储
boto3 = "1.40.21"
minio = "7.2.16"
azure-storage-blob = "12.22.0"
azure-identity = "1.17.1"
azure-storage-file-datalake = "12.16.0"

# Redis缓存
redis = "6.4.0"

# =============================================================================
# 业务相关
# =============================================================================
# 认证和安全
python-jose = {extras = ["cryptography"], version = "3.5.0"}
PyJWT = "2.10.1"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.3.0"
cryptography = "45.0.6"
email-validator = "2.3.0"

# 图像处理
Pillow = "11.3.0"

# 定时任务
APScheduler = "3.10.4"

[tool.poetry.group.dev.dependencies]
# 测试
pytest = "7.4.3"
pytest-asyncio = "0.21.1"

# 开发工具
black = "23.11.0"
isort = "5.12.0"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "supplemental"

[tool.poetry.scripts]
start = "app.main:main"